# llamabot

./: .all-contributorsrc  .bumpversion.cfg  .cursorrules  .dockerignore  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  blog_text.txt  config.js  constraints-ci.txt  environment.yml  hooks.py  index.html  mkdocs.yaml  pixi.toml  pyproject.toml  scipy_videos.json  setup.py  sitemap.xml  skills-lock.json
.cursor/commands/: branch-and-stage.md  remember.md  update-docs.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build-devcontainer.yaml  claude-code-review.yml  code-style.yaml  docs.yaml  ollama-on-ci.yaml  pr-tests.yaml  release-python-package.yaml  test-pypi-package.yaml  update-ollama-models.yaml
.llamabot/: .gitignore
archive/: experiment_design_agent_with_glm.py  sqlite_vec_docstore.py
archive/tests/: test_sqlite_vec_docstore.py
cli/blog/: index.html
cli/docs/: index.html
cli/git/: index.html
cli/llamabot/: index.html
cli/log-viewer/: index.html
cli/mcp/: index.html
cli/notebook/: index.html
cli/python/: index.html
cli/repo/: index.html
cli/zotero/: index.html
contributing/setup/: index.html
design/agentbot_pocketflow_graph/: index.html
design/agents-build-own-tools/: index.html
design/log_viewer/: index.html
design/observability/: index.html
design/unified_chat_memory/: index.html
devcontainer/: index.html
developer/devcontainer/: index.html
developer_README/: index.html
docs/: api.md  blog_text.txt  chat_panel.ipynb  chatbot_nb.ipynb  devcontainer.md  developer_README.md  high-level-design.md  index.md  llamahub_loaders.ipynb  pdf.ipynb  performance.ipynb  querybot.ipynb  recorder.ipynb  scipy_videos.json  scratch.ipynb  simple_chatbot.ipynb  simple_panel.ipynb  simplebot.ipynb
docs/cli/: blog.md  docs.md  git.md  llamabot.md  log-viewer.md  mcp.md  notebook.md  python.md  repo.md  serve.md  zotero.md
docs/contributing/: getting-started.md  setup.md
docs/design/: agent_environment_decoupling.md  agentbot_pocketflow_graph.md  agents-build-own-tools.md  log_viewer.md  observability.md  unified_chat_memory.md
docs/developer/: devcontainer.md  playwright_testing.md
docs/examples/: adversarial-checker.ipynb  anthropic_api.ipynb  anthropic_api.md  async_agentbot_htmx_demo.py  async_querybot_htmx_demo.py  async_simplebot_htmx_demo.py  async_structuredbot_htmx_demo.py  async_toolbot_htmx_demo.py  chatbot_nb.ipynb  chatbot_nb.py  docstring_checker.ipynb  docstring_checker.py  graph-chat-memory.py  groq.ipynb  groq.py  imagebot.ipynb  imagebot.py  json_mode.ipynb  json_mode.py  knowledge-graph-bot.ipynb  knowledge-graph-bot.py  llamabot_docs.py  pdf.ipynb  pdf.py  pydanticbot.ipynb  querybot.ipynb  querybot.py  recorder.ipynb  recorder.py  sample_python_guide.md  scratch.ipynb  simple_chatbot.ipynb  simple_panel.py  simplebot.ipynb  simplebot.py  sse_streaming.ipynb  sse_streaming.py  streaming.ipynb  structuredbot.ipynb  structuredbot.py
docs/getting-started/: which-bot.md
docs/how-to/: agent-mcp-tools.md  cli-powered-by-llm.md  cli-powered-by-llm.py  data-analysis-agentbot.md  data-analysis-agentbot.py  generate-blog-banner-images.py  receipt-processing.md  receipt-processing.py
docs/modules/: chat_memory.md  doc_processor.md  file_finder.md  prompt_recorder.md  toolbot.md
docs/reference/: sse.md  streaming_async.md
docs/releases/: v0.0.10.md  v0.0.11.md  v0.0.12.md  v0.0.13.md  v0.0.14.md  v0.0.15.md  v0.0.16.md  v0.0.17.md  v0.0.18.md  (+222 more)
examples/: adversarial-checker.py  feynman.py  feynman_cli.py  feynman_panel.py  groq.py  llamabot_docs.py  sqlitevec_example.py  toolbot_example.py
high-level-design/: index.html
llamabot/: __init__.py  bot.py  cache.py  cli.py  code_manipulation.py  config.py  doc_processor.py  dummy.py  experiments.py  file_finder.py  mcp_server.py  panel_utils.py  precache.py  preprocessing.py  prompt_manager.py  recorder.py  schemas.py  sse.py  utils.py  version.py
notebooks/: README.md  agentbot_build.py  agents.ipynb  agents.py  chatbot_as_agent.py  conversation-threads.py  data.csv  experiment_design_agent.py  ic50_data_with_confounders.csv  intro.py  lancedb_docstore.py  mcp-agentbot-demo.py  mcp-integration-demo.py  mcp-tools.py  pocketflow_testdrive.py  react-agentbot-demo.py  span_logging_example.py  toolbot_chatdata.py  tools.py
scratch_notebooks/: adversarial-checker.ipynb  agentbot.ipynb  banner_image.ipynb  blogging_assistant.ipynb  cache.ipynb  chatbot_as_simplebot.ipynb  chatui.ipynb  code_graph.ipynb  code_tutorial.ipynb  code_workflow.ipynb  context_manager.ipynb  demo.ipynb  diffbot.ipynb  docbot.ipynb  docstore_lancedb.ipynb  dummy_notebook.ipynb  dummy_notebook.ipynb_explained.ipynb  embed_repo.ipynb  experimentation_api.ipynb  extract_script.ipynb  functions.ipynb  gcal.ipynb  github-file-level-summary.ipynb  github_actions_matrix.ipynb  litellm-mistral.ipynb  litellm-vision-models.ipynb  llamahub_loaders.ipynb  mistral.ipynb  modal.ipynb  modal_endpoint.ipynb  multiscale_embeddings.ipynb  notebook_explainer.ipynb  ollama.ipynb  outlines_backend_prototype.ipynb  outlines_models.ipynb  panel-chat.ipynb  paper_review.ipynb  patreon_ghostwriter.ipynb  performance.ipynb  prompt_decorator.ipynb  (+15 more)
scripts/: async_simplebot_htmx_demo.py  async_structuredbot_htmx_demo.py  autoupdate_ollama_models.py  benchmark_imports.py  build_mcp_docs.py  convert_marimo_to_markdown.py  fastapi_example.py  fastapi_sse_example.py  minimal_sse_proof.py  precache_embeddings.py  test_bare_imports.py  yo.py
search/: search_index.json
tests/: conftest.py  test___init__.py  test_async_simplebot_htmx_demo.py  test_bot.py  test_cli.py  test_code_manipulation.py  test_doc_processor.py  test_experiments.py  test_file_finder.py  test_import_smoke.py  test_marimo_examples_pep723.py  test_models.py  test_prompt_manager.py  test_recorder.py  test_serve_nostream.sh  test_serve_root.sh  test_serve_stream.sh  test_serve_tags.sh  test_sse.py  test_streaming_async.py  test_utils.py
(+3196 files in other folders)
