# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "examples", "scripts", "tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^no_docstring_func$", "^empty_func$"]
verbose = 2
quiet = false
whitelist-regex = []
color = true

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing -m 'not llm_eval' --durations=10"
testpaths = [
    "tests",
]
norecursedirs = ["archive/*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.hatch.build.targets.wheel]
packages = ["llamabot"]
include-package-data = true
artifacts = [
    "llamabot/data/mcp_docs/**/*",
]

[tool.hatch.build.targets.wheel.sources]
"llamabot" = "llamabot"

[project]
name = "llamabot"
version = "0.19.1"
# Runtime dependencies below — only truly core deps live here.
# Heavy/feature-specific deps are in [project.optional-dependencies].
dependencies = [
    "lazy_loader",
    "litellm>=1.71.0,<1.82.7", # temporary upper bound due to 2026-03-24 compromised 1.82.7/1.82.8 releases
    "loguru",
    "pydantic>=2.0",
    "python-dotenv",
    "pyprojroot",
    "python-slugify",
    "httpx",
    "jinja2",
    "sqlalchemy",
    "tenacity",
    "tqdm",
    "typer>=0.15.3",
    "numpydoc", # Temporarily added on 2025-05-10 to fix LiteLLM's omission of this dependency.
]
requires-python = ">=3.10,<3.14"
description = "A Pythonic interface to LLMs."
readme = "README.md"

[project.urls]
"Documentation" = "https://ericmjl.github.io/llamabot"
"Source Code" = "https://github.com/ericmjl/llamabot"

[project.scripts]
llamabot = "llamabot.cli:app"

[project.optional-dependencies]
# Feature-specific extras — install only what you need.
#   pip install llamabot[agent]   — agent bots with tool orchestration
#   pip install llamabot[rag]     — RAG pipelines (includes turbovec, lancedb)
#   pip install llamabot[mcp]     — MCP (Model Context Protocol) integration
#   pip install llamabot[tools]   — built-in agent tools (web search, scraping)
#   pip install llamabot[image]   — image generation bot
#   pip install llamabot[web]     — FastAPI web UI and log viewer
#   pip install llamabot[chat-memory] — graph-based conversation memory
#   pip install llamabot[cli]     — full CLI with rich output, git helpers, etc.
#   pip install llamabot[all]     — everything

agent = [
    "pocketflow",
    "docker",
    "markdownify",
]
chat-memory = [
    "networkx",
]
cli = [
    "nbformat",
    "python-frontmatter",
    "rich",
    "gitpython",
    "prompt-toolkit",
    "case-converter",
    "pyperclip",
]
image = [
    "pillow",
]
mcp = [
    "fastmcp",
]
rag = [
    "beautifulsoup4",
    "chonkie",
    "duckduckgo-search",
    "docstring-parser>=0.17.0,<0.18",
    "lancedb>=0.22",
    "numpy",
    "pdfminer.six",
    "pylance",
    "rank-bm25",
    "rerankers",
    "sentence-transformers",
    "turbovec",
]
tools = [
    "beautifulsoup4",
    "docstring-parser>=0.17.0,<0.18",
    "duckduckgo-search",
    "requests",
]
web = [
    "fastapi>=0.115.9",
    "python-multipart",
    "starlette",
    "uvicorn",
]
notebooks = [
    "ics",
    "tzlocal",
    "modal",
    "ipykernel",
]
all = [
    "llamabot[agent,chat-memory,cli,image,mcp,rag,tools,web,notebooks]"
]
# Shorthand aliases
turbovec = [
    "turbovec",
    "sentence-transformers",
]

[dependency-groups]
notebooks = ["ollama>=0.4.4,<0.5"]
agent = []
cli = []

[tool.pixi.workspace]
name = "llamabot"
description = "A Pythonic interface to LLMs"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64", "linux-aarch64", "win-64"]

[tool.pixi.pypi-dependencies]
llamabot = { path = ".", editable = true, extras = ["agent", "cli", "rag", "notebooks", "tools", "mcp", "image", "web", "chat-memory"] }

[tool.pixi.feature.tests.pypi-dependencies]
pytest = "*"
hypothesis = "*"
pytest-cov = "*"
pytest-mock = "*"
tuna = "*"

[tool.pixi.feature.devtools.pypi-dependencies]
pre-commit = "*"
ipython = "*"
bump2version = "*"
ty = "*"

[tool.pixi.feature.docs.pypi-dependencies]
mkdocs = "*"
mkdocs-material = "*"
mknotebooks = "*"

# TASKS BELOW!
[tool.pixi.tasks]
llamabot-cli = "llamabot --help"
build-mcp-docs = "python scripts/build_mcp_docs.py"

[tool.pixi.feature.notebooks.tasks]
jlab = "jupyter lab"

[tool.pixi.feature.tests.tasks]
test = "pytest"

[tool.pixi.feature.tests.dependencies]
pytest-asyncio = ">=1.0.0,<2"

[tool.pixi.feature.docs.tasks]
docs = "mkdocs serve"
build-docs = "mkdocs build"

[tool.pixi.environments]
default = ["tests", "devtools", "docs", "notebooks", "rag", "agent", "cli"]
docs = ["docs"]
notebooks = ["notebooks", "rag", "agent"] # for those who just want to run notebooks
bare = ["devtools"]

[tool.pixi.dependencies]
python-multipart = "*"
numpydoc = ">=1.8.0,<2"
python-frontmatter = ">=1.1.0,<2"
lazy_loader = "*"

[tool.ty.environment]
python = "./.pixi/envs/default"
